--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <!-- will add favicon back when we have one -->
     <!-- <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#a0a0a0" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -25,7 +25,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <!-- data-theme will be manipulated to change theme -->
-    <div id="root" data-theme="themeA"></div>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
