global button styling

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -36,6 +36,10 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
       rel="stylesheet" />
     <title>Book search</title>
+    <!-- fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC&display=swap"
+      rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
