--- a/client/public/index.html
+++ b/client/public/index.html
@@ -40,6 +40,10 @@
     <link
       href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC&display=swap"
       rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans&display=swap"
+      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lora&display=swap"
+      rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
