--- a/client/public/index.html
+++ b/client/public/index.html
@@ -44,6 +44,8 @@
       rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora&display=swap"
       rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bevan&display=swap"
+      rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
