--- a/client/public/index.html
+++ b/client/public/index.html
@@ -47,7 +47,7 @@
     <link href="https://fonts.googleapis.com/css?family=Bevan&display=swap"
       rel="stylesheet">
   </head>
-  <body>
+  <body class="themeA">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
